LPD-52395 Fix spacing

--- a/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/categorization/Categorization.scss
+++ b/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/categorization/Categorization.scss
@@ -53,3 +53,7 @@
 		}
 	}
 }
+
+.modal-body .categorization-spaces .close {
+	position: unset !important;
+}
